[gd_scene load_steps=4 format=3 uid="uid://8uu8o48bw4sp"]

[ext_resource type="PackedScene" path="res://level1/scene_template.tscn" id="1_base"]
[ext_resource type="Script" uid="uid://y3xgudcin7j3" path="res://level1/secret_passage_puzzle.gd" id="2_script"]
[ext_resource type="Texture2D" uid="uid://d1om16454jv3e" path="res://level1/Secret_Passage.jpg" id="3_bg"]

[node name="SecretPassagePuzzle" instance=ExtResource("1_base")]
script = ExtResource("2_script")

[node name="Background" parent="." index="0"]
texture = ExtResource("3_bg")

[node name="TitleLabel" type="Label" parent="HBoxContainer/LeftVBox" index="0"]
layout_mode = 2
text = "Hidden Door Mechanism"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="1"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="HBoxContainer/LeftVBox/InstructionPanel" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Place and rotate pipes to energize the node"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BreakTimerPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="2"]
layout_mode = 2

[node name="BreakTimerBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/BreakTimerPanel" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="BreakTimer" type="Label" parent="HBoxContainer/LeftVBox/BreakTimerPanel" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Break Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PipesPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="3"]
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PipesLabel" type="Label" parent="HBoxContainer/LeftVBox/PipesPanel" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Pipes: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitlePanel" type="Panel" parent="HBoxContainer/LeftVBox" index="4"]
layout_mode = 2

[node name="PlacePipeButton" type="Button" parent="HBoxContainer/RightVBox" index="0"]
layout_mode = 2
text = "Place Pipe"

[node name="BackButton" type="Button" parent="HBoxContainer/RightVBox" index="1"]
layout_mode = 2
text = "Back to Secret Passage"

[node name="SettingsOverlay" parent="." index="3"]
layout_mode = 1

[node name="PuzzleContainer" type="Control" parent="." index="4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="HBoxContainer/RightVBox/PlacePipeButton" to="." method="_on_place_pipe_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/BackButton" to="." method="_on_back_button_pressed"]
